--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -16,41 +16,43 @@ services:
     depends_on:
       - api
     volumes:
-      - ../resources/nginx/certs:/certs
-      - ../resources/nginx/conf/application.conf:/opt/bitnami/nginx/conf/server_blocks/application.conf:ro
+      - ./resources/nginx/certs:/certs
+      - ./resources/nginx/conf/application.conf:/opt/bitnami/nginx/conf/server_blocks/application.conf:ro
     networks:
       - internal_network
 
   api:
     build:
-      context: ../
-      dockerfile: docker-files/local.dockerfile
+      context: ./
+      dockerfile: Dockerfile
+      target: api-development
     image: arya/{{cookiecutter.project_slug}}-api:local
     container_name: {{cookiecutter.project_slug}}_api
     depends_on:
       - postgresql
       - rabbitmq
     env_file:
-      - ../envs/local/local.env
+      - ./envs/local/local.env
     volumes:
-      - ../workspace:/app/workspace
+      - ./workspace:/app/workspace
     tty: true
     networks:
       - internal_network
 
   worker:
     build:
-      context: ../
-      dockerfile: docker-files/worker.dockerfile
+      context: ./
+      dockerfile: Dockerfile
+      target: worker-development
     image: arya/{{cookiecutter.project_slug}}-worker:local
     container_name: {{cookiecutter.project_slug}}_worker
     depends_on:
       - api
       - rabbitmq
     env_file:
-      - ../envs/local/worker.env
+      - ./envs/local/worker.env
     volumes:
-      - ../workspace:/app/workspace
+      - ./workspace:/app/workspace
     tty: true
     networks:
       - internal_network
@@ -59,7 +61,7 @@ services:
     image: bitnami/postgresql:latest
     container_name: {{cookiecutter.project_slug}}_postgresql
     env_file:
-      - ../envs/local/postgresql.env 
+      - ./envs/local/postgresql.env 
     volumes:
       - postgresql_volume:/bitnami/postgresql
     networks:
@@ -69,7 +71,7 @@ services:
     image: bitnami/rabbitmq:latest
     container_name: {{cookiecutter.project_slug}}_rabbitmq
     env_file:
-      - ../envs/local/rabbitmq.env
+      - ./envs/local/rabbitmq.env
     volumes:
       - rabbitmq_volume:/bitnami
     networks:
