--- a/{{cookiecutter.project_slug}}/envs/local/local.env
+++ b/{{cookiecutter.project_slug}}/envs/local/local.env
@@ -4,7 +4,7 @@ ENV=local
 
 # Template Settings
 # TODO: Move to Docker Secrets
-SECRET_KEY={{cookiecutter.project_secret_key}}
+SECRET_KEY={{random_ascii_string(32)}}
 
 # Application Specific
 LOG_LEVEL=debug
