--- a/{{cookiecutter.project_slug}}/requirements/api/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/requirements/api/pyproject.toml
@@ -22,6 +22,7 @@ sqlalchemy = "^1.3.19"
 tenacity = "^6.2.0"
 ujson = "^3.1.0"
 uvicorn = "^0.11.8"
+msgpack-python = "^0.5.6"
 
 [tool.poetry.dev-dependencies]
 autoflake = "^1.4"
