--- a/{{cookiecutter.project_slug}}/requirements/worker/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/requirements/worker/pyproject.toml
@@ -9,6 +9,8 @@ python = "^3.7"
 celery = "^4.4.7"
 loguru = "^0.5.1"
 sqlalchemy = "^1.3.19"
+msgpack-python = "^0.5.6"
+psycopg2-binary = "^2.8.6"
 
 [tool.poetry.dev-dependencies]
 
