--- a/{{cookiecutter.project_slug}}/requirements/api/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/requirements/api/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "api"
 version = "0.1.0"
-description = "Project Requirements for Thresher API"
+description = "Project Requirements for Hydra API"
 authors = ["Aaditya Panikath <aadityarajeev@gmail.com>"]
 
 [tool.poetry.dependencies]
