--- a/{{cookiecutter.project_slug}}/requirements/worker/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/requirements/worker/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "worker"
 version = "0.1.0"
-description = "Project Requirements for Thresher Worker"
+description = "Project Requirements for Hydra Worker"
 authors = ["Aaditya Panikath <aadityarajeev@gmail.com>"]
 
 [tool.poetry.dependencies]
